final commit for production

--- a/public/main.scss
+++ b/public/main.scss
@@ -151,6 +151,7 @@ div#content {
                   border: 1px solid lighten($mid, 10);
                   background-color: $mid;
                   color: white;
+                  cursor: pointer;
                 }
               }
               
